# aviasim-api

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: deploy.yml  prod.yml
migrations/: 0_schema.sql  20240306142531_schema.sql  20240307211631_schema.sql
src/: error.rs  main.rs  orm.rs
