[package]
name = "aviasim-orders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
color-eyre = "0.6.2"
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["postgres"] }
tokio = { version = "1.36.0" , features = ["macros", "rt", "rt-multi-thread"] }
