[package]
name = "aviasim-orders"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
chrono = { version = "0.4.35", features = ["serde"] }
color-eyre = "0.6.2"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "macros", "time", "runtime-tokio", "chrono"] }
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
